--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,10 @@
 <header class="site-header">
-  <a href="{{ site.baseurl }}/" class="logo"><span class="logo"><amp-img src="{{ site.baseurl }}{{ site.logo }}" width="48" height="48" /></span></a>
+  <a href="{{ site.baseurl }}/" class="logo" style="text-decoration:none;">
+    <header class="blog-header" style="display:inline;">
+      <h1 class="blog-title" style="display:inline;">{{ site.title }}</h1>
+      <h2 class="blog-description">{{ site.description }}</h2>
+     </header>
+  </a>
 
   <div class="page-links">
     <a class="page-link" href="{{ site.baseurl }}/">Home</a>
