--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="site-header">
-  <a href="{{ site.baseurl }}/" class="logo" style="text-decoration:none;">
-    <span class="logo" style="margin-right:10px;"><amp-img src="{{ site.baseurl }}{{ site.logo }}" width="72" height="72" /></span>
-    <div style="display:inline-block;">
-    <header class="blog-header" style="display:inline;">
-      <h1 class="blog-title" style="display:inline;">{{ site.title }}</h1>
+  <a href="{{ site.baseurl }}/" class="logo">
+    <span class="logo"><amp-img src="{{ site.baseurl }}{{ site.logo }}" width="72" height="72" /></span>
+    <div class="title-and-desc-wrapper">
+    <header class="blog-header">
+      <h1 class="blog-title">{{ site.title }}</h1>
       <h2 class="blog-description">{{ site.description }}</h2>
      </header>
      </div>
