Fix list margin

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -356,8 +356,7 @@ body {
       }
     }
     ul, ol {
-      padding: 0 0 30px;
-      margin: 0;
+      margin: 30px 0 0;
     }
     li {
       padding: 0;
